kubernetes/radarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: radarr
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`radarr.tehmatt.com`)
    kind: Rule
    services:
    - name: radarr
      port: 7878
    middlewares:
    - name: default-headers
      namespace: radarr
  tls:
    secretName: tehmatt-tls
